--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <!--
@@ -55,10 +55,4 @@
     });
   </script>
 </body>
-</html> -->
-
-<html>
-  <body>
-    <h1>Mades Almeida</h1>
-  </body>
 </html>
